--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@dependency/addModuleResolutionPath": "https://github.com/AppScriptIO/addModuleResolutionPath",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "next",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -15,8 +15,7 @@
     "prettier": "^1.16.4",
     "typescript": "^3.3.3333"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "workspaces": [],
   "private": true
 }
