--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "prettier": "^1.16.4",
     "typescript": "^3.3.3333"
   },
+  "peerDependencies": {
+    "@babel/core": "*"
+  },
   "devDependencies": {
     "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation",
     "typescript": "^3.3.3333"
