--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,5 +49,20 @@
     "eslint.codeAction.showDocumentation": {
         "enable": true
     },
-    "typescript.check.npmIsInstalled": false
+    "typescript.check.npmIsInstalled": false,
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#a529c0",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#b89e27",
+        "activityBarBadge.foreground": "#15202b",
+        "titleBar.activeBackground": "#a529c0",
+        "titleBar.inactiveBackground": "#a529c099",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "statusBar.background": "#a529c0",
+        "statusBarItem.hoverBackground": "#bd45d7",
+        "statusBar.foreground": "#e7e7e7"
+    },
+    "peacock.color": "#bd45d7"
 }
