--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@dependency/javascriptStaticAnalysis",
   "main": "./entrypoint/programmaticAPI",
   "version": "1.0.1",
-  "scripts": {},
+  "scripts": {
+    "buildAndRelease": "yarn run scriptManager shouldCompileScript=true JSProject/buildAndRelease \".moduleProject({})\""
+  },
   "dependencies": {
     "@dependency/addModuleResolutionPath": "https://github.com/AppScriptIO/addModuleResolutionPath#semver:^1.x.x",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
@@ -19,9 +21,10 @@
     "@babel/core": "*"
   },
   "devDependencies": {
+    "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript#semver:^1.x.x",
     "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^1.x.x",
+    "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis#semver:^1.x.x",
+    "@dependency/scriptManager": "https://github.com/AppScriptIO/scriptManager#semver:^1.x.x",
     "typescript": "^3.3.3333"
-  },
-  "workspaces": [],
-  "private": true
+  }
 }
