--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,19 +51,23 @@
     },
     "typescript.check.npmIsInstalled": false,
     "workbench.colorCustomizations": {
-        "activityBar.background": "#a529c0",
-        "activityBar.activeBorder": "#b89e27",
+        "activityBar.background": "#0373ef",
+        "activityBar.activeBorder": "#fea1cd",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#b89e27",
+        "activityBarBadge.background": "#fea1cd",
         "activityBarBadge.foreground": "#15202b",
-        "titleBar.activeBackground": "#a529c0",
-        "titleBar.inactiveBackground": "#a529c099",
+        "titleBar.activeBackground": "#0373ef",
+        "titleBar.inactiveBackground": "#0373ef99",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "statusBar.background": "#a529c0",
-        "statusBarItem.hoverBackground": "#bd45d7",
+        "statusBar.background": "#0373ef",
+        "statusBarItem.hoverBackground": "#298dfc",
         "statusBar.foreground": "#e7e7e7"
     },
-    "peacock.color": "#bd45d7"
+    "peacock.color": "#bd45d7",
+    "peacock.remoteColor": "#298dfc",
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    }
 }
