--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
 	"name": "@deployment/javascriptStaticAnalysis",
 	"main": "./entrypoint/programmaticAPI",
-	"version": "2.1.0",
+	"version": "3.0.0",
 	"scripts": {
 		"build": "yarn run scriptManager shouldCompileScript=true @deployment/deploymentScript \".buildSourceCode.moduleProject({}, {compile:[/**'./test'*/]})\"",
 		"buildAndRelease": "yarn run scriptManager shouldCompileScript=true @deployment/deploymentScript \".buildAndRelease.moduleProject({})\""
 	},
 	"dependencies": {
 		"@dependency/handleModuleSystem": "https://github.com/AppScriptIO/handleModuleSystem#semver:^2.x.x",
-		"@open-wc/eslint-config": "^2.0.3",
-		"@open-wc/prettier-config": "^0.1.14",
-		"@typescript-eslint/eslint-plugin": "^1.4.2",
-		"@typescript-eslint/parser": "^1.4.2",
+		"@open-wc/eslint-config": "*",
+		"@open-wc/prettier-config": "*",
+		"@typescript-eslint/eslint-plugin": "*",
+		"@typescript-eslint/parser": "*",
 		"babel-eslint": "next",
-		"eslint": "^5.15.1",
-		"eslint-config-prettier": "^4.1.0",
-		"eslint-plugin-babel": "^5.3.0",
-		"eslint-plugin-prettier": "^3.0.1",
-		"prettier": "^1.16.4",
-		"typescript": "^3.3.3333"
+		"eslint": "next",
+		"eslint-config-prettier": "*",
+		"eslint-plugin-babel": "*",
+		"eslint-plugin-prettier": "*",
+		"prettier": "*",
+		"typescript": "*"
 	},
 	"peerDependencies": {
 		"@babel/core": "*"
@@ -28,6 +28,6 @@
 		"@deployment/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis#semver:^2.x.x",
 		"@deployment/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^2.x.x",
 		"@deployment/scriptManager": "https://github.com/AppScriptIO/scriptManager#semver:^2.x.x",
-		"typescript": "^3.3.3333"
+		"typescript": "*"
 	}
 }
